tests/ui/type-alias-impl-trait/auto-trait-leakage2.stderr
error[E0277]: `Rc<u32>` cannot be sent between threads safely
  --> $DIR/auto-trait-leakage2.rs:21:13
   |
LL |     type Foo = impl std::fmt::Debug;
   |                -------------------- within this `Foo`
...
LL |     is_send(m::foo());
   |     ------- ^^^^^^^^ `Rc<u32>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Foo`, the trait `Send` is not implemented for `Rc<u32>`
note: required because it appears within the type `Foo`
  --> $DIR/auto-trait-leakage2.rs:7:16
   |
LL |     type Foo = impl std::fmt::Debug;
   |                ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `is_send`
  --> $DIR/auto-trait-leakage2.rs:16:15
   |
LL | fn is_send<T: Send>(_: T) {}
   |               ^^^^ required by this bound in `is_send`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
